tied up "optimizing for joy" concept

--- a/content/post/2018-07-04-when-in-doubt-optimize-for-joy.Rmd
+++ b/content/post/2018-07-04-when-in-doubt-optimize-for-joy.Rmd
@@ -49,6 +49,8 @@ Somewhere along the line I had internalized the message that we're supposed to b
 
 And that message is a bit difficult to believe when you don't mind your day job. Where it gets really tough is when you realize that you like your day job. And listening to that message becomes damn near impossible when you realize that you've fallen in love with your day job and wake up one day to suddenly recognize that you're doing exactly what you're meant to be doing at this point in your life.
 
+I'm in a place where my career and the people I work with brings me joy, and also gives me the gift of time to pursue my passions and interests outside of work. It's a precarious balance, but I'm going to ride this wave as long as I can.
+
 ***
 
 ## So for now...
