--- a/content/post/2018-07-04-when-in-doubt-optimize-for-joy.Rmd
+++ b/content/post/2018-07-04-when-in-doubt-optimize-for-joy.Rmd
@@ -45,7 +45,7 @@ And here's what it's been replaced with:
 
 ![](https://i.imgur.com/umaNGft.jpg)
 
-Somewhere along the line I had internalized the message that we're supposed to begrudge our day jobs while we labor furiously at a side hustle that will eventually become the thing that is our career. I swallowed that message hook, line, and sinker, telling anyone who would listen that I was going to _make it_ in data science education, whatever that means. As if I didn't already know that this is all a journey and the destination is merely a temporary resting place.
+Somewhere along the line I had internalized the message that we're supposed to begrudge our day jobs while we labor furiously at a side hustle that will eventually become the thing that is our career. I swallowed that message hook, line, and sinker, telling anyone who would listen that I was going to _make it_ in data science education, whatever that means - as if I didn't already know that this is all a journey and the destination is merely a temporary resting place.
 
 And that message is a bit difficult to believe when you don't mind your day job. Where it gets really tough is when you realize that you like your day job. And listening to that message becomes damn near impossible when you realize that you've fallen in love with your day job and wake up one day to suddenly recognize that you're doing exactly what you're meant to be doing at this point in your life.
 
@@ -54,7 +54,7 @@ I'm in a place where my career and the people I work with brings me joy, and als
 ***
 
 ## So for now...
-The [R4DS Online Learning Community](http://www.rfordatasci.com/) is doing great things, but it's moved so far out of alignment with what I envisioned that it was time for me to step down and hand things off to others. I'm excited to see how it evolves in the coming years. 
+The [R4DS Online Learning Community](http://www.rfordatasci.com/) is doing great things, but it's moved so far out of alignment with what I envisioned that it was time for me to step down and hand things off to others. I'm looking forward to seeing how it evolves in the coming years. 
 
 [R-Ladies](https://rladies.org/) is a phenomenal organization - **phenomenal** - but I had conflated being _good_ at community organizing with _enjoying_ community organizing. I'm excited to see where new leadership takes the Dallas chapter, and looking forward to participating as a member rather than a leader.
 
