--- a/content/post/2018-07-04-when-in-doubt-optimize-for-joy.Rmd
+++ b/content/post/2018-07-04-when-in-doubt-optimize-for-joy.Rmd
@@ -15,7 +15,7 @@ My summer started with a bang:
 * A surprisingly difficult - _but completely treatable_ - medical diagnosis
 * The illness and eventual passing of a beloved family member
 
-Each of these items paced themselves perfectly and provided an ongoing (and most welcome!) sense a relief that beautifully masked my growing disinterest and discontent with my place in the `R` community. With each of these big ordeals happening in rapid succession, I didn't have time to feel guilty about the ever-present sense of apathy for projects that once were my reason for getting out of bed in the morning.
+Each of these items paced themselves perfectly and provided an ongoing (and most welcome!) sense of relief that beautifully masked my growing disinterest and discontent with my place in the `R` community. With each of these big ordeals happening in rapid succession, I didn't have time to feel guilty about the ever-present sense of apathy for projects that once were my reason for getting out of bed in the morning.
 
 On the surface it _felt_ like I had everything I needed to be successful. In the last year I've been invited to speak at conferences, interview for jobs, review books, write a book (!!!), and guest lecture. My Twitter account seemed to magically grow with little to no attention. My inbox began to regularly fill up with people looking for advice, or to connect, or to collaborate. My need for external validation had been utterly and completely met, and I felt nothing other than a growing sense of dissatisfaction.
 
