--- a/content/post/2018-09-16-r4ds-v1-v2-a-retrospective.Rmd
+++ b/content/post/2018-09-16-r4ds-v1-v2-a-retrospective.Rmd
@@ -28,11 +28,10 @@ As part of the invitation, Jeff had asked if I'd be able to give a presentation 
 
 ***
 
-## What is R4DS?
 ![](/img/Slide01.png)
-The [R4DS Online Learning Community](http://www.rfordatasci.com/) (R4DS) has gone through several iterations, the first two of which I'll discuss today. Currently the R4DS Online Learning Community can be described as a Slack group comprised of learners and mentors gathered together to provide support and guidance in learning R in a safe and supportive environment.
+The [R4DS Online Learning Community](http://www.rfordatasci.com/) (R4DS) has gone through several iterations, the first two of which I'll discuss today. Currently the R4DS Online Learning Community can be described as a Slack group comprised of learners and mentors gathered together to provide support and guidance in learning R in a beginner-friendly, safe and supportive environment.
 
-While I am no longer affiliated with R4DS, the split was amicable, of my own choosing, and done because I felt that my energy and contributions to the R community could be best made elsewhere. I am still very proud of the work that continues to happen within the community, and thrilled that several individuals were willing to step up and steer the ship when it became time for me to step down.
+While I am no longer affiliated with R4DS, the split was amicable, of my own choosing, and done because I felt that my energy and contributions to the R community could best be made elsewhere. I am very proud of the work that continues to happen within the community, and thrilled that several individuals were willing to step up and steer the ship when it became time for me to step down.
 
 ***
 
@@ -60,11 +59,12 @@ I was living in Seattle, unemployed, and playing at least 12 hours of World of W
 
 I had heard about programming, and I knew video games needed to be programmed, so I enrolled in the "Introduction to Programming" course at the local community college. I failed out of the course twice. 
 
-Around the same time I had started a Twitter account, and was following various gaming companies when PVP Live had put out a call for community managers. Figuring this could be an in, I was immediately signed on as a volunteer in charge of blogging about WoW and Hearthstone while also managing the company's Twitter account. 
+Around the same time I had started a Twitter account, and was following various gaming companies when PVP Live had put out a call for community managers. Figuring this could be my _in_, I immediately applied and was onboarded on as a volunteer in charge of blogging about WoW and Hearthstone while also managing the company's Twitter account. 
 
-At some point it came up that I was good at math and numbers, and so was asked to interview for a position involving math and numbers (the position didn't actually exist at the time I interviewed). After initial phone interviews I was given a performance task, which was essentially "here's the League of Legends API. Show us what you can come up with in a week."
+At some point it came up that I was good at math and numbers, and was asked to interview for a position involving math and numbers (the position didn't actually exist at the time I interviewed). After initial phone interviews I was given a performance task, which was essentially "here's the League of Legends API. Show us what you can come up with in a week."
 
 Things I _didn't_ know at the time of this performance task:
+
   * what an API was
   * what League of Legends was
   * what the hell "show us what you can come up with" meant
@@ -73,7 +73,7 @@ Rather than ask questions of my potential future employers, I brushed off my Goo
 
 I was hired and asked to choose my job title. Clearly this kind of opportunity doesn't come up often, so I said I was a "data scientist" and was hired part-time remote at what seemed like an absolutely luxurious salary (it wasn't). To me this was the start - I had the job title, I knew I had enough basic data science skills to be successful, and I was confident that I could learn as I went along.
 
-Within six months I was asked to join the company on-site in a full-time capacity, and on day one I was promoted to management. It turns out that when you're in management you do a lot more meetings than data science, and so while I started working in R, I was hacking things together as needed. 
+Within six months I was asked to join the company on-site in a full-time capacity, and on day one I was promoted to management. It turns out that when you're in management you do a lot more meetings than data science, and so while I was sporadically working in R, I was hacking things together as needed. 
 
 Life happens, start-ups shut down, and sometimes you find yourself in Texas as an unemployed data scientist. But hey, it turns out that being able to work with data is a highly employable skill, and within weeks I was working at the Girl Scouts of Northeast Texas. My job title was "Outcomes Analyst," but being able to recognize data science jobs in non-data scientist job titles is 90% of getting your first data science job.
 
@@ -117,12 +117,12 @@ Community management is not easy. At the end of the first round I was burned out
 
 As far as I know only one person finished the entire curriculum. The biggest drop was in the first few weeks, related to the issues mentioned above. Those who were still active in the Slack group shared that the pace was faster than they had anticipated, and that once they fell behind, "catching up" felt too difficult.
 
-Taking all of this into consideration, along with my own capacity, we entered into Round 2.
+Taking all of this into consideration, along with an evaluation of my own capacity, we entered into Round 2.
 
 ***
 
 ![](/img/Slide09.png)
-My biggest concern headed into Round 2 was my own ability to keep providing the level of care necessary to have a functioning group. I was facing increased responsibilities at work, and didn't have as much time to dedicate to the endeavor, and so my thought was to open the group up to rolling admissions, commit to writing monthly challenges, and encouraging group members to drive their own initiatives.
+My biggest concern headed into Round 2 was my own ability to keep providing the level of care necessary to have a functioning group. I was facing increased responsibilities at work, and didn't have as much time to dedicate to the R4DS endeavor, and so my thought was to open the group up to rolling admissions, commit to writing monthly challenges, and encouraging group members to drive their own initiatives.
 
 We tried a lot of things - office hours, video tutorials, committing to commenting/asking questions, creating a logo, and building a [website](http://www.rfordatasci.com/) and [Twitter](https://twitter.com/R4DScommunity) profile. All of these were (and still are) community-driven efforts, although the one you've most likely heard of is [#TidyTuesday](https://twitter.com/hashtag/tidytuesday?f=tweets&vertical=default&src=hash).
 
@@ -131,9 +131,9 @@ While I loved everything that was happening in the group, it was transitioning a
 ***
 
 ![](/img/Slide10.png)
-I've spent a lot of time thinking about how I would do things differently if I had the capacity for a new iteration of the group. And while I haven't thought through all of the details, I'd put diversity, equity, and inclusion as a driving principle of the group, so that it could be a means for underrepresented populations to move into data science related careers.
+I've spent a lot of time thinking about how I would do things differently if I had the capacity for a new iteration of the group. And while I haven't thought through all of the details, I'd put [diversity, equity, and inclusion](https://independentsector.org/resource/why-diversity-equity-and-inclusion-matter/) as a driving principle of the group, so that it function as a means for underrepresented populations to move into data science related careers.
 
-Scalability and sustainability are important factors to consider, and as such I'd keep the group small, using cohorts of less than 100 people. Within the cohorts that would be one to two mentors and four to six learners within a learning pod that was formed based on time zone, baseline skill proficiency, and timeline to complete the text.
+Scalability and sustainability are important factors to consider, and I'd keep the group small, using cohorts of less than 100 people. Within the cohorts that would be one to two mentors and four to six learners clustered into a learning pod formed based on time zone, baseline skill proficiency, and timeline to complete the text.
 
 How we train the people delivering data science education is important, and I'd like to see mentors undergo an application process, along with training in educational methods, ongoing assessment of effectiveness, and coaching to help mentors develop and grow their skills as data science educators.
 
