--- a/content/post/2018-10-03-til-locf.Rmd
+++ b/content/post/2018-10-03-til-locf.Rmd
@@ -31,7 +31,7 @@ My first step is always to tinker with things, and in this case I was hoping tha
 
 ![](https://i.imgur.com/TOHGpXN.jpg)
 
-Drawing things out is a great exercise in creating a concrete representation of what you're trying to accomplish, while slowing you down in a way that prevents you from spiraling out of control with a bunch of garbage code thrown at your console, while also giving you space to consider the various nuances of what you're trying to do. In this case I noticed that my school names were always in all caps, and got the sense that I was going to be doing some sort of repeated operation that was going to differentiate between a school name and a demographic. My guess was that I was going to need to use `purrr()` in some capacity, but nothing quite seemed right. So I asked for help.
+Drawing things out is a great exercise in creating a concrete representation of what you're trying to accomplish by slowing you down in a way that prevents you from spiraling out of control with a bunch of garbage code thrown at your console, while also giving you space to consider the various nuances of what you're trying to do. In this case I noticed that my school names were always in all caps, and got the sense that I was going to be doing some sort of repeated operation that was going to differentiate between a school name and a demographic. My guess was that I was going to need to use `purrr()` in some capacity, but nothing quite seemed right. So I asked for help.
 
 I hate asking for help for a lot of reasons, but I always encourage others to ask for help. So in an effort to practice practicing what I preach, I spent about 30 minutes on working out a solution, come up with what I thought was an informed guess, and could articulate the problem well enough to ask for a nudge in the right direction. 
 
