troubleshooting netlify build

--- a/content/post/2019-10-24-programming-parallels-a-lesson-in-empathy.Rmd
+++ b/content/post/2019-10-24-programming-parallels-a-lesson-in-empathy.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Programming parallels: a lesson in empathy'
-author: 
+author: 'Jesse'
 date: '2019-10-24'
 slug: programming-parallels-a-lesson-in-empathy
 categories: []
