edit for clarity

--- a/content/post/2019-10-24-programming-parallels-a-lesson-in-empathy.Rmd
+++ b/content/post/2019-10-24-programming-parallels-a-lesson-in-empathy.Rmd
@@ -65,7 +65,7 @@ Home an hour and $50 later, I was excited to start actually creating something. 
 
 ####Assumption one - get the end of your yarn out of the skein  
 
-There wasn't a "loose end" on my yarn for me to pick up and use, so I found myself Googling all manner of phrases to finding the starting end of a skein of yarn. It took awhile and required me to know whether or not I had what's called "center pull" yarn (I didn't, and it's not labeled on the skein, so I just assumed that I did and went with it - turns out I was right!) Cool, I've got the yarn, let's go!
+There wasn't a "loose end" on my yarn for me to pick up and use, so I found myself Googling all manner of phrases to finding the starting end of a skein of yarn. It took awhile and required me to know whether or not I had what's called "center pull" yarn (it's not labeled on the skein, so I just assumed that I did and went with it - turns out I was right!) Cool, I've got the yarn, let's go!
 
 ####Assumption two - I knew how to read a crochet pattern
 
