--- a/content/post/2020-03-18-learning-machine-learning-personal-inventory-and-roadmap.Rmd
+++ b/content/post/2020-03-18-learning-machine-learning-personal-inventory-and-roadmap.Rmd
@@ -30,18 +30,18 @@ And if you're like me and my first attempts at both Civ and Machine Learning, it
 
 ## Civ Map <> Learning Map
 The first time I played Civ I thought the map was broken, so I quit and didn't touch the game again for three years.
-What I didn't realize at the time was that with each turn you play in Civ, you begin to progressively uncover more and more of the map, until you've uncovered everything, and can get a full lay of the land.
+What I didn't realize at the time was that with each turn you play in Civ, you begin to progressively uncover more and more of the map, until you've uncovered everything and can get a full lay of the land.
 To me there's no greater metaphor for your personal learning journey than uncovering the map in Civ. 
 So many of us set out to become "data scientists" or "machine learning engineers" because they seem like _really cool things to do_ (and they are).
-And while there might be some general landmarks (folks recommending this book or this class), no one knows your personal learning map - it's something that you have to uncover as you go.
+And while there might be some general guidance (folks recommending this book or this class), no one knows _your_ personal learning map - it's something that you have to uncover as you go.
 
 One strategy is to spend your first couple hundred turns building nothing but Scouts and sending them out into the world until you completely uncover the map.
-And on the one hand this seems somewhat reasonable, because you'll know everything that's out there before committing your resources to a specific win condition. 
-This strategy isn't unlike the procrastiplanning I'm guilty of.
-Rather than jumping in and trying to learn something, I can spend weeks and even months charting out the perfect learning path.
-"Once I have this perfect path I'll be ready to learn! It's foolproof! I AM A GENIUS!" I tell myself as I Google another "best way to learn Python _for real_" resource.
+On the one hand this seems somewhat reasonable, because after awhile you'll know everything that's out there and _then_ you can start committing your resources to a specific win condition. 
+This strategy isn't unlike the procrastiplanning I'm guilty of, where rather than jumping in and trying to learn something, I  spend weeks and even months charting out the perfect learning path.
 
-But this strategy can leave you vulnerable and exposed, and it's an awful lot of time you've spent not learning.
+>"Once I have this perfect path I'll be ready to learn! It's foolproof! I AM A GENIUS!" I tell myself as I Google another "best way to learn Python _for real_" resource.
+
+But this strategy can leave you vulnerable and exposed, and it's an awful lot of time you've spent _not_ learning.
 And honestly, there are only so many Venn diagrams you can look at.
 
 ![](/post/2020-03-18-learning-machine-learning-personal-inventory-and-roadmap_files/venn_diagram_use.jpg){width=650px}
@@ -50,27 +50,27 @@ And honestly, there are only so many Venn diagrams you can look at.
 I've spent a lot of time uncovering my map. 
 Like, a _lot_ of time.
 And I don't have a perfect learning plan - I don't think I ever did.
-Instead I have a couple of general landmarks that I know I want to work towards, and a good understanding of where I'm starting.
+Instead I have a couple of general landmarks that I know I want to work towards coupled with a good understanding of where I'm starting.
 
-What changed for me was encountering two resources that cleared some of the fog from my landmarks.
+What helped me to find my landmarks was encountering two resources that instantly cleared away some of the fog.
 The first was Janelle Shane's ["You Look Like A Thing And I Love You"](https://www.janelleshane.com/book-you-look-like-a-thing), which explores the absurdities of what you can create with AI, and the second was [NSynth Super project from Magenta](https://nsynthsuper.withgoogle.com/). 
-I learned about the NSynth Super from this [Nat & Friends](https://www.youtube.com/channel/UCf4AIjSwE-E2TggCPdm-z-A) video, and as soon as the video was finished playing I was hooked - I _needed_ to learn how to do this.
+I learned about the NSynth Super from this [Nat & Friends](https://www.youtube.com/channel/UCf4AIjSwE-E2TggCPdm-z-A) video, and as soon as the video finished I was hooked - I _needed_ to learn how to do this.
 
 ```{r, eval=TRUE, echo=FALSE}
 blogdown::shortcode("youtube", "BOoSy-Pg8is")
 ```
 
-
+</br>
 But even when some of your landmarks are visible, it doesn't mean that the path is clear, or that it isn't scary, or that you're entirely confident that you can _reach_ your landmarks.
 It's kind of like playing single-player mode in a video game that you know nothing about.
-You _might_ have a lot of fun, but you might also be frustrated and confused, and eventually hit a barrier that you don't know how to overcome.
+You _might_ have a lot of fun, but you might also be frustrated and confused and eventually hit a barrier that you don't know how to overcome.
 
 ![](/post/2020-03-18-learning-machine-learning-personal-inventory-and-roadmap_files/single_player.jpg){width=650px}
 
 ## Play Multi-player When You Can
 Your learning map is probably going to look different from mine, because you're a different person with different goals and a different background! 
 But that doesn't mean that we're both not on a learning journey together.
-Sometimes you're going to have to learn on your own, but as often as possible, reach out to your community.
+Sometimes you're going to have to learn on your own, but as often as possible, spend time learning with others.
 
 I have many crises of confidence - sometimes I spend entire days near tears because my landmarks feel so far away, the path is overgrown and dark, and I simply don't want to do this anymore.
 But I also have people I can reach out to, from friends who can empathize with me to online forums where I can ask for help.
@@ -80,7 +80,7 @@ It won't always be easy, but it will always be worth it.
 ![](/post/2020-03-18-learning-machine-learning-personal-inventory-and-roadmap_files/multiplayer_use.jpg){width=650px}
 
 ## Learn With Me!
-Every week I'll be posting a round-up of my learning journey. I'll be sharing:
+Every week I'll be posting a round-up of my (deep learning) learning journey. I'll be sharing:
 
 - What I learned
 - How I learned it (both the resources I used as well as learning techniques)
@@ -89,5 +89,5 @@ Every week I'll be posting a round-up of my learning journey. I'll be sharing:
 - What I'm planning to work on in the upcoming week
 
 ## Learn With Me!
-I truly believe that we learn better when we learn together! 
-I'd love to hear what your landmarks are and how your learning journey is going, and the best place to do that is to start the conversation on [Twitter](www.twitter.com/kierisi).
+I truly believe that we learn better when we learn together. 
+I'd love to hear what your landmarks are and how your learning journey is going, and the best place to do that is to start the conversation on [Twitter](www.twitter.com/kierisi)!
