--- a/content/post/2020-04-05-reach-for-good-enough.Rmd
+++ b/content/post/2020-04-05-reach-for-good-enough.Rmd
@@ -53,7 +53,7 @@ I haven't made it far into the text, but it's nice to feel like I'm making progr
 The original plan was to make it through the first two chapters, and then spend an online session doing the coding exercises in chapter 2, but between a work project and submitting our <a href="https://datascienceineducation.com/" target="_blank">Data Science in Education</a> manuscript to the publisher, I couldn't get through chapter 2.
 So we're trying again this week!
 
-**<a href="https://course.fast.ai/" target="_blank">fast.ai Practical Deep Learning For Coders course</a>** _(large online group)_
+**Continuing <a href="https://course.fast.ai/" target="_blank">fast.ai Practical Deep Learning For Coders course</a>** _(large online group)_
 
 I appreciate the way that the content in the course is designed, and that the creators have taken the "whole learning" approach from <a href="https://www.goodreads.com/book/show/4116086-making-learning-whole" target="_blank">Perkins</a> with regards to curriculum design, but the delivery is the same as most online courses I've tried: the instructor reads to you for the duration of the class.
 I'm not sure that I'm getting anything out of attending the lecture that I don't get from reading the book and completing the exercises, but I do like having the group structure to help with deadlines.
@@ -63,5 +63,5 @@ A lot of the same things from last week!
 
 - Week four of <a href="https://course.fast.ai/" target="_blank">fast.ai Practical Deep Learning For Coders course</a>, along with working through the coding exercises and end of chapter questions. One thing I want to commit to is spending time going through the documentation while doing the coding exercises, so that I can better understand what's happening with my code.
 - Chapter 2 of <a href="https://www.oreilly.com/library/view/hands-on-machine-learning/9781492032632/" target="_blank">Hands-On Machine Learning with Scikit-Learn, Keras, and Tensorflow</a>
-- Continue with <a href="https://jakevdp.github.io/PythonDataScienceHandbook/" target="_blank">
+- Continue with <a href="https://jakevdp.github.io/PythonDataScienceHandbook/" target="_blank">Python Data Science Handbook</a>
 
