--- a/content/blog/2019-03-28-learning-to-learn-metacognition-and-the-coalesce-function/2019-03-28-learning-to-learn-metacognition-and-the-coalesce-function.Rmd
+++ b/content/blog/2019-03-28-learning-to-learn-metacognition-and-the-coalesce-function/2019-03-28-learning-to-learn-metacognition-and-the-coalesce-function.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Learning to Learn: metacognition and the coalesce() function'
-author: 'Jesse '
+author: Jesse Mostipak
 date: '2019-03-28'
 slug: learning-to-learn-metacognition-and-the-coalesce-function
 categories: []
